--- a/index.html
+++ b/index.html
@@ -115,11 +115,13 @@
     </ol>
     <hr />
     <h3>Courses</h3>
-    <table cell spacing="10">
+    <table cell spacing="30">
       <tr>
         <center>
           <th>Name of the Course</th>
           <th>Duration</th>
+          <th>Mode</th>
+          <th>Organisation/Company</th>
           <th>Description</th>
         </center>
       </tr>
@@ -127,30 +129,35 @@
         <center>
           <td>Machine Learning Internship</td>
           <td>3 days</td>
+          <td>Offline</td>
+          <td>MSME</td>
         </center>
         <td>
-          It is an in-person course form MSME. We have been taught from the
-          beginning to an advanced level in Python Programming.
+          We have been taught from the beginning to an advanced level in Python
+          Programming.
         </td>
       </tr>
       <tr>
         <center>
           <td>Data Science Training</td>
           <td>1 month</td>
+          <td>Online</td>
+          <td>Internshala</td>
         </center>
         <td>
-          It is an online course from Internshala. I have been taught about the
-          concept and practical implementation of them in Jupiter Notebook.
+          I have been taught about the concept and practical implementation of
+          them in Jupiter Notebook.
         </td>
       </tr>
       <tr>
         <center>
           <td>Java Course Internship</td>
           <td>1 month</td>
+          <td>Offline</td>
+          <td>Kaashiv Infotech</td>
         </center>
         <td>
-          It is an in-person course from Kaashiv Infotech. We have been taught
-          from the basics to an intermediate level in Java
+          We have been taught from the basics to an intermediate level in Java
         </td>
       </tr>
       <tr>
