--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
     </ul>
     <hr />
     <h3>Technical Skills</h3>
-    <table cellspacing="10">
+    <li>
+    <ul> Python </ul>
+    <ul> C </ul>
+    <ul> Java </ul>
+    <ul> HTML </ul>
+    <ul> CSS </ul>
+    <ul> SQL </ul>
+    </li>
+<!--     
+<table cellspacing="10">
       <tr>
         <td>Python</td>
         <td>⭐⭐⭐⭐</td>
@@ -94,8 +103,9 @@
         <td>⭐⭐⭐</td>
       </tr>
     </table>
-
-    <hr />
+    <hr /> -->
+    
+    
     <h3>Publication</h3>
     <ol>
       <li>
